syntax = "proto3";

package estore.estore;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "estore/estore/params.proto";
import "estore/estore/product.proto";

option go_package = "estore/x/estore/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/estore/estore/params";
  
  }
  
  // Queries a list of Product items.
  rpc Product    (QueryGetProductRequest) returns (QueryGetProductResponse) {
    option (google.api.http).get = "/estore/estore/product/{id}";
  
  }
  rpc ProductAll (QueryAllProductRequest) returns (QueryAllProductResponse) {
    option (google.api.http).get = "/estore/estore/product";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetProductRequest {
  uint64 id = 1;
}

message QueryGetProductResponse {
  Product Product = 1 [(gogoproto.nullable) = false];
}

message QueryAllProductRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllProductResponse {
  repeated Product                                Product    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

